--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@icon/themify-icons": "^1.0.1-alpha.3",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "sweetalert2": "^11.4.17",
     "vue": "^2.6.14",
+    "vue-form-wizard": "^0.8.4",
+    "vue-masked-input": "^0.5.2",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
